# abc

game1/: CMakeLists.txt  MODULE_REFACTOR_GUIDE.md  main.cpp  main_new.cpp
game1/core/: GameLoop.cpp  StateMachine.cpp
game1/include/: Common.h  Food.h  Game.h  Input.h  Renderer.h  SaveSystem.h  Snake.h
game1/src/: Common.cpp  Food.cpp  Game.cpp  Input.cpp  Renderer.cpp  SaveSystem.cpp  Snake.cpp
game1/systems/: InputSystem.cpp  RenderSystem.cpp
